ultimos arreglos pre-segunda entrega

--- a/01_v-multi.html
+++ b/01_v-multi.html
@@ -44,14 +44,11 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                <div data-responsive="false"> <img src="projects/p_006/full/01.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/02.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/03.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/04.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/05.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/06.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_006/full/07.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_006/full/08.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_000/full/02.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_000/full/03.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_000/full/05.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_000/full/07.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -64,55 +61,39 @@
     </section>
 
     <section id="project-title">
-        <p>- Cervecería Baum Luján -</p>
+        <p>- Vivienda Multifamiliar -</p>
     </section>
 
     <section id="projects-gallery">
         <div id="gal-button-left"><button onclick="minToLeft()"><img src="img/gallery-arrow.svg" alt=""></button></div>
-        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button>
-        </div>
+        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button></div>
 
         <div id="img-container">
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_006/min/01.png" alt="">
+                    <img src="projects/p_000/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_006/min/02.png" alt="">
+                    <img src="projects/p_000/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_006/min/03.png" alt="">
+                    <img src="projects/p_000/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_006/min/04.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_006/min/05.png" alt="">
+                    <img src="projects/p_000/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_006/min/06.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_006/min/07.png" alt="">
+                    <img src="projects/p_000/min/07.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_006/min/08.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
             </div>
@@ -128,21 +109,21 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>Cerveceria Baum Lujan</p>
+                <p>Vivienda Multifamiliar</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2016</p>
+                <p>2018</p>
             </div>
         </div>
 
@@ -152,7 +133,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>458 m2</p>
+                <p>878 m2</p>
             </div>
         </div>
 
@@ -162,7 +143,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>371 m2</p>
+                <p>1027 m2</p>
             </div>
         </div>
 
