--- a/03_v-multi.html
+++ b/03_v-multi.html
@@ -43,14 +43,13 @@
 
         <div id="gallery-container">
             <div id="gallery">
-                <div data-responsive="false"> <img src="projects/p_008/full/01.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_008/full/02.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_008/full/03.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_008/full/04.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_008/full/05.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_008/full/06.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_008/full/07.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_008/full/08.jpg"></div>
+
+                <div data-responsive="false"> <img src="projects/p_002/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_002/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_002/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_002/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_002/full/05.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_002/full/06.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -63,7 +62,7 @@
     </section>
 
     <section id="project-title">
-        <p>- Brando -</p>
+        <p>- Vivienda Unifamiliar -</p>
     </section>
 
     <section id="projects-gallery">
@@ -75,42 +74,33 @@
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_008/min/01.png" alt="">
+                    <img src="projects/p_002/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_008/min/02.png" alt="">
+                    <img src="projects/p_002/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_008/min/03.png" alt="">
+                    <img src="projects/p_002/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_008/min/04.png" alt="">
+                    <img src="projects/p_002/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_008/min/05.png" alt="">
+                    <img src="projects/p_002/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_008/min/06.png" alt="">
+                    <img src="projects/p_002/min/06.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
-                </div>
-                <div class="img min-out">
-                    <img src="projects/p_008/min/07.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_008/min/08.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
             </div>
@@ -126,7 +116,7 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
@@ -136,7 +126,7 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
@@ -150,7 +140,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>914 m2</p>
+                <p>434 m2</p>
             </div>
         </div>
 
@@ -160,7 +150,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>222 m2</p>
+                <p>369 m2</p>
             </div>
         </div>
 
