--- a/08_v-uni.html
+++ b/08_v-uni.html
@@ -65,7 +65,7 @@
     </section>
 
     <section id="project-title">
-        <p>- Castiglia -</p>
+        <p>- Vivienda Unifamiliar -</p>
     </section>
 
     <section id="projects-gallery">
@@ -134,7 +134,7 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
@@ -144,7 +144,7 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
