--- a/10_v-uni.html
+++ b/10_v-uni.html
@@ -44,17 +44,19 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                <div data-responsive="false"> <img src="projects/p_005/full/01.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_005/full/02.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_005/full/03.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_005/full/04.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_005/full/05.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_005/full/07.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/06.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/07.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_009/full/08.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
                 <button onclick="fullToPrev()"><img class="g-first-btn" src="img/full-gal-arrow.svg" alt=""></button>
-                <button onclick="closeFullGallery()"><img class="g-close" src="img/full-cross.png" alt=""></button>
+                <button onclick="closeFullGallery()"><img src="img/full-cross.png" alt=""></button>
                 <button onclick="fullToNext()"><img class="g-last-btn" src="img/full-gal-arrow.svg" alt=""></button>
             </div>
         </div>
@@ -62,7 +64,7 @@
     </section>
 
     <section id="project-title">
-        <p>- Arballo -</p>
+        <p>- Vivienda Unifamiliar -</p>
     </section>
 
     <section id="projects-gallery">
@@ -74,33 +76,43 @@
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_005/min/01.png" alt="">
+                    <img src="projects/p_009/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_005/min/02.png" alt="">
+                    <img src="projects/p_009/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_005/min/03.png" alt="">
+                    <img src="projects/p_009/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_005/min/04.png" alt="">
+                    <img src="projects/p_009/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_005/min/05.png" alt="">
+                    <img src="projects/p_009/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_005/min/07.png" alt="">
+                    <img src="projects/p_009/min/06.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_009/min/07.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_009/min/08.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
             </div>
@@ -116,17 +128,17 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>Vivienda Multifamiliar</p>
+                <p>Vivienda Unifamiliar</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
@@ -140,7 +152,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>462 m2</p>
+                <p>781 m2</p>
             </div>
         </div>
 
@@ -150,7 +162,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>420 m2</p>
+                <p>269 m2</p>
             </div>
         </div>
 
@@ -167,7 +179,7 @@
                     <p>Teléfono oficina Luján: (11) 15/5957-0115</p>
                 </div>
                 <div class="f-dir2">
-                    <p>Mitre 1060, Pehuajó, Buenos Aires.</p>
+                    <p>Hipólito Yrigoyen 897, Pehuajó, Buenos Aires.</p>
                     <p class="f-div">&nbsp;-&nbsp</p>
                     <p>Teléfono oficina Pehuajó: (02396) 15 604-111</p>
                 </div>
