--- a/02_tropel.html
+++ b/02_tropel.html
@@ -44,10 +44,15 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                <div data-responsive="false"> <img src="projects/p_009/full/01.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_009/full/02.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_009/full/03.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_009/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/06.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/07.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/08.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_001/full/09.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -60,7 +65,7 @@
     </section>
 
     <section id="project-title">
-        <p>- Massola -</p>
+        <p>- Cervecería TROPEL -</p>
     </section>
 
     <section id="projects-gallery">
@@ -72,23 +77,48 @@
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_009/min/01.png" alt="">
+                    <img src="projects/p_001/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_009/min/02.png" alt="">
+                    <img src="projects/p_001/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_009/min/03.png" alt="">
+                    <img src="projects/p_001/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_009/min/04.png" alt="">
+                    <img src="projects/p_001/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_001/min/05.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_001/min/06.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_001/min/07.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_001/min/08.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_001/min/09.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(8)">Ver más</button></div>
                 </div>
 
             </div>
@@ -104,21 +134,21 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>Vivienda Unifamiliar</p>
+                <p>Cervecería TROPEL</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2018</p>
+                <p>2017</p>
             </div>
         </div>
 
@@ -128,7 +158,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>781 m2</p>
+                <p>434 m2</p>
             </div>
         </div>
 
@@ -138,7 +168,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>269 m2</p>
+                <p>369 m2</p>
             </div>
         </div>
 
@@ -155,7 +185,7 @@
                     <p>Teléfono oficina Luján: (11) 15/5957-0115</p>
                 </div>
                 <div class="f-dir2">
-                    <p>Hipólito Yrigoyen 897, Pehuajó, Buenos Aires.</p>
+                    <p>Mitre 1060, Pehuajó, Buenos Aires.</p>
                     <p class="f-div">&nbsp;-&nbsp</p>
                     <p>Teléfono oficina Pehuajó: (02396) 15 604-111</p>
                 </div>
