--- a/05_escuela-medalla.html
+++ b/05_escuela-medalla.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/projects-gallery.css">
 </head>
 
-<body onresize="onResizeAction()" >
+<body onresize="onResizeAction()">
 
     <section id="menu-desplegable" class="menu-off">
         <div><a class="burger-link" href="index.html#anchor-estudio">Estudio</a></div>
@@ -44,11 +44,12 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                    <div data-responsive="false"> <img src="projects/p_011/full/01.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_011/full/02.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_011/full/03.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_011/full/04.jpg"></div>
-                    <div data-responsive="true"> <img src="projects/p_011/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_004/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_004/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_004/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_004/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_004/full/05.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_004/full/06.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -61,39 +62,45 @@
     </section>
 
     <section id="project-title">
-        <p>- Castro -</p>
+        <p>- Escuela Medalla Milagrosa -</p>
     </section>
 
     <section id="projects-gallery">
         <div id="gal-button-left"><button onclick="minToLeft()"><img src="img/gallery-arrow.svg" alt=""></button></div>
-        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button></div>
+        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button>
+        </div>
 
         <div id="img-container">
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_011/min/01.png" alt="">
+                    <img src="projects/p_004/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_011/min/02.png" alt="">
+                    <img src="projects/p_004/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_011/min/03.png" alt="">
+                    <img src="projects/p_004/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_011/min/04.png" alt="">
+                    <img src="projects/p_004/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_011/min/05.png" alt="">
+                    <img src="projects/p_004/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_004/min/06.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
                 </div>
 
             </div>
@@ -109,21 +116,21 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>Vivienda Unifamiliar</p>
+                <p>Escuela Medalla Milagrosa</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2012</p>
+                <p>2018</p>
             </div>
         </div>
 
@@ -133,7 +140,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>655 m2</p>
+                <p>928 m2</p>
             </div>
         </div>
 
@@ -143,7 +150,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>140 m2</p>
+                <p>627 m2</p>
             </div>
         </div>
 
