--- a/06_v-multi.html
+++ b/06_v-multi.html
@@ -44,16 +44,17 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                <div data-responsive="false"> <img src="projects/p_000/full/01.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_000/full/02.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_000/full/03.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_000/full/05.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_000/full/07.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_005/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_005/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_005/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_005/full/04.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_005/full/05.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_005/full/07.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
                 <button onclick="fullToPrev()"><img class="g-first-btn" src="img/full-gal-arrow.svg" alt=""></button>
-                <button onclick="closeFullGallery()"><img src="img/full-cross.png" alt=""></button>
+                <button onclick="closeFullGallery()"><img class="g-close" src="img/full-cross.png" alt=""></button>
                 <button onclick="fullToNext()"><img class="g-last-btn" src="img/full-gal-arrow.svg" alt=""></button>
             </div>
         </div>
@@ -61,38 +62,44 @@
     </section>
 
     <section id="project-title">
-        <p>- Deptos San Martín -</p>
+        <p>- Vivienda Multifamiliar -</p>
     </section>
 
     <section id="projects-gallery">
         <div id="gal-button-left"><button onclick="minToLeft()"><img src="img/gallery-arrow.svg" alt=""></button></div>
-        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button></div>
+        <div id="gal-button-right"><button onclick="minToRight()"><img src="img/gallery-arrow.svg" alt=""></button>
+        </div>
 
         <div id="img-container">
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_000/min/01.png" alt="">
+                    <img src="projects/p_005/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_000/min/02.png" alt="">
+                    <img src="projects/p_005/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_000/min/03.png" alt="">
+                    <img src="projects/p_005/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_000/min/05.png" alt="">
+                    <img src="projects/p_005/min/04.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_005/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_000/min/07.png" alt="">
+                    <img src="projects/p_005/min/07.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
                 </div>
 
@@ -109,7 +116,7 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
@@ -119,7 +126,7 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
@@ -133,7 +140,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>878 m2</p>
+                <p>462 m2</p>
             </div>
         </div>
 
@@ -143,7 +150,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>1027 m2</p>
+                <p>420 m2</p>
             </div>
         </div>
 
