--- a/07_baum.html
+++ b/07_baum.html
@@ -44,15 +44,14 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                <div data-responsive="false"> <img src="projects/p_001/full/01.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/02.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/03.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/04.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/05.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/06.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/07.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/08.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_001/full/09.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_006/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_006/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_006/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_006/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_006/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_006/full/06.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_006/full/07.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_006/full/08.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -65,7 +64,8 @@
     </section>
 
     <section id="project-title">
-        <p>- Cervecería TROPEL -</p>
+        <p>- Cervecería Baum Luján -</p>
+        <p class='extra-info'> <i> ESTUDIOS ASOCIADOS - Arquitecto German Verdejo - Carballo Marino Arquitectos <i></i></p>
     </section>
 
     <section id="projects-gallery">
@@ -77,48 +77,43 @@
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_001/min/01.png" alt="">
+                    <img src="projects/p_006/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_001/min/02.png" alt="">
+                    <img src="projects/p_006/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_001/min/03.png" alt="">
+                    <img src="projects/p_006/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_001/min/04.png" alt="">
+                    <img src="projects/p_006/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_001/min/05.png" alt="">
+                    <img src="projects/p_006/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_001/min/06.png" alt="">
+                    <img src="projects/p_006/min/06.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_001/min/07.png" alt="">
+                    <img src="projects/p_006/min/07.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_001/min/08.png" alt="">
+                    <img src="projects/p_006/min/08.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_001/min/09.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(8)">Ver más</button></div>
                 </div>
 
             </div>
@@ -134,21 +129,21 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>Cervecería TROPEL</p>
+                <p>Cerveceria Baum Lujan</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2017</p>
+                <p>2016</p>
             </div>
         </div>
 
@@ -158,7 +153,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>434 m2</p>
+                <p>458 m2</p>
             </div>
         </div>
 
@@ -168,7 +163,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>369 m2</p>
+                <p>371 m2</p>
             </div>
         </div>
 
