--- a/11_grupo-mas.html
+++ b/11_grupo-mas.html
@@ -44,12 +44,14 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                <div data-responsive="false"> <img src="projects/p_004/full/01.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_004/full/02.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_004/full/03.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_004/full/04.jpg"></div>
-                <div data-responsive="false"> <img src="projects/p_004/full/05.jpg"></div>
-                <div data-responsive="true"> <img src="projects/p_004/full/06.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_010/full/01.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_010/full/02.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_010/full/03.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_010/full/04.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_010/full/05.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_010/full/06.jpg"></div>
+                <div data-responsive="false"> <img src="projects/p_010/full/07.jpg"></div>
+                <div data-responsive="true"> <img src="projects/p_010/full/08.jpg"></div>
 
             </div>
             <div id="gallery-buttons">
@@ -62,7 +64,7 @@
     </section>
 
     <section id="project-title">
-        <p>- Escuela Medalla Milagrosa -</p>
+        <p>- Oficina Grupo Mas -</p>
     </section>
 
     <section id="projects-gallery">
@@ -74,33 +76,43 @@
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_004/min/01.png" alt="">
+                    <img src="projects/p_010/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_004/min/02.png" alt="">
+                    <img src="projects/p_010/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_004/min/03.png" alt="">
+                    <img src="projects/p_010/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_004/min/04.png" alt="">
+                    <img src="projects/p_010/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_004/min/05.png" alt="">
+                    <img src="projects/p_010/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_004/min/06.png" alt="">
+                    <img src="projects/p_010/min/06.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_010/min/07.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
+                </div>
+
+                <div class="img min-out">
+                    <img src="projects/p_010/min/08.png" alt="">
+                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
                 </div>
 
             </div>
@@ -116,21 +128,21 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>Escuela Medalla Milagrosa</p>
+                <p>Oficina Grupo Mas</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2018</p>
+                <p>2014</p>
             </div>
         </div>
 
@@ -140,7 +152,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>928 m2</p>
+                <p>100 m2</p>
             </div>
         </div>
 
@@ -150,7 +162,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>627 m2</p>
+                <p>100 m2</p>
             </div>
         </div>
 
