--- a/12_v-uni.html
+++ b/12_v-uni.html
@@ -44,18 +44,13 @@
         <div id="gallery-container">
             <div id="gallery">
 
-                    <div data-responsive="false"> <img src="projects/p_003/full/01.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/02.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/03.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/04.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/05.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/06.jpg"></div>
-                    <div data-responsive="false"> <img src="projects/p_003/full/07.jpg"></div>
-                    <div data-responsive="true"> <img src="projects/p_003/full/08.jpg"></div>
-                    <div data-responsive="true"> <img src="projects/p_003/full/10.jpg"></div>
-                    <div data-responsive="true"> <img src="projects/p_003/full/12.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_011/full/01.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_011/full/02.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_011/full/03.jpg"></div>
+                    <div data-responsive="false"> <img src="projects/p_011/full/04.jpg"></div>
+                    <div data-responsive="true"> <img src="projects/p_011/full/05.jpg"></div>
 
-                </div>
+            </div>
             <div id="gallery-buttons">
                 <button onclick="fullToPrev()"><img class="g-first-btn" src="img/full-gal-arrow.svg" alt=""></button>
                 <button onclick="closeFullGallery()"><img src="img/full-cross.png" alt=""></button>
@@ -66,7 +61,7 @@
     </section>
 
     <section id="project-title">
-        <p>- Battistotti -</p>
+        <p>- Vivienda Unifamiliar -</p>
     </section>
 
     <section id="projects-gallery">
@@ -77,53 +72,28 @@
             <div id="gallery-images">
 
                 <div class="img min-left">
-                    <img src="projects/p_003/min/01.png" alt="">
+                    <img src="projects/p_011/min/01.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
                 </div>
 
                 <div class="img min-center">
-                    <img src="projects/p_003/min/02.png" alt="">
+                    <img src="projects/p_011/min/02.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
                 </div>
 
                 <div class="img min-right">
-                    <img src="projects/p_003/min/03.png" alt="">
+                    <img src="projects/p_011/min/03.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_003/min/04.png" alt="">
+                    <img src="projects/p_011/min/04.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
                 </div>
 
                 <div class="img min-out">
-                    <img src="projects/p_003/min/05.png" alt="">
+                    <img src="projects/p_011/min/05.png" alt="">
                     <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_003/min/06.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_003/min/07.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_003/min/08.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_003/min/10.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(9)">Ver más</button></div>
-                </div>
-
-                <div class="img min-out">
-                    <img src="projects/p_003/min/12.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(11)">Ver más</button></div>
                 </div>
 
             </div>
@@ -139,21 +109,21 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>OBRA</p>
+                <p>Obra</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>Vivienda Multifamiliar Battistotti</p>
+                <p>Vivienda Unifamiliar</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>A — O</p>
+                <p>Año</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2018</p>
+                <p>2012</p>
             </div>
         </div>
 
@@ -163,7 +133,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>928 m2</p>
+                <p>655 m2</p>
             </div>
         </div>
 
@@ -173,7 +143,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>627 m2</p>
+                <p>140 m2</p>
             </div>
         </div>
 
