--- a/07_baum.html
+++ b/07_baum.html
@@ -159,7 +159,7 @@
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>Superficie Construída</p>
+                <p>Superficie Construida</p>
             </div>
             <div class="data-content">
                 <div></div>
