--- a/09_v-uni.html
+++ b/09_v-uni.html
@@ -117,7 +117,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2017</p>
+                <p>2018</p>
             </div>
         </div>
 
@@ -127,17 +127,17 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>914 m2</p>
+                <p>781 m2</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>Superficie Construída</p>
+                <p>Superficie Construida</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>222 m2</p>
+                <p>269 m2</p>
             </div>
         </div>
 
