--- a/10_v-uni.html
+++ b/10_v-uni.html
@@ -142,7 +142,7 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>2018</p>
+                <p>2017</p>
             </div>
         </div>
 
@@ -152,17 +152,17 @@
             </div>
             <div class="data-content">
                 <div></div>
-                <p>781 m2</p>
+                <p>914 m2</p>
             </div>
         </div>
 
         <div class="ficha-data">
             <div class="data-title">
-                <p>Superficie Construída</p>
+                <p>Superficie Construida</p>
             </div>
             <div class="data-content">
                 <div></div>
-                <p>269 m2</p>
+                <p>222 m2</p>
             </div>
         </div>
 
