--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p> Desde el 2012, nos dedicamos al proyecto y desarrollo de obras de arquitectura de diferentes escalas,
                 buscando nuevas técnicas de documentación y representación digital, que nos permitan responder de la
                 mejor manera a todas las necesidades.</p>
-            <p><strong>Nuestras obras se estructuran a partir del diseño, innovación y la optimización de los
+            <p><strong>Nuestras obras se estructuran a partir del diseño la innovación y la optimización de los
                     recursos
                     disponibles, orientadas a un desarrollo eficaz y de absoluta calidad.</strong></p>
         </div>
@@ -308,7 +308,7 @@
                     <div class="p-description">
                         <div class="data">
                             <h4>Vivienda Unifamiliar</h4>
-                            <p>Luján - Bs.As.</p>
+                            <p>Pehuajó - Bs.As.</p>
                         </div>
                         <div class="link">
                             <div>
@@ -324,9 +324,10 @@
                     <div class="p-description">
                         <div class="data">
                             <h4>Vivienda Unifamiliar</h4>
-                            <p>Pehuajó - Bs.As.</p>
+                            <p>Luján - Bs.As.</p>
                         </div>
                         <div class="link">
+                            <!-- bando -->
                             <div>
                                 <a href="10_v-uni.html">Ver más</a>
                             </div>
@@ -402,7 +403,7 @@
             <p>Buscanos en nuestras redes sociales.</p>
             <div id="redes">
                 <a href="https://www.facebook.com/CarmaArquitectura/" target="_blank"><img src="img/facebook-icon.svg" alt=""></a>
-                <a href="https://www.facebook.com/CarmaArquitectura/" target="_blank"><img src="img/facebook-icon.svg" alt=""></a>
+                <a href="https://www.facebook.com/CarmaArquitectura/" target="_blank"><img src="img/instagram.svg" alt=""></a>
             </div>
         </div>
 
