--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     </section>
 
     <div id='lines-wrapper'>
-        <div id="right-line"></div>
-        <div id="left-line"></div>
+        <!-- <div id="right-line"></div>
+        <div id="left-line"></div> -->
 
         <section id="servicios">
 
