--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p> Desde el 2012, nos dedicamos al proyecto y desarrollo de obras de arquitectura de diferentes escalas,
                 buscando nuevas técnicas de documentación y representación digital, que nos permitan responder de la
                 mejor manera a todas las necesidades.</p>
-            <p><strong>Nuestras obras se estructuran a partir del diseño la innovación y la optimización de los
+            <p><strong>Nuestras obras se estructuran a partir del diseño, la innovación y la optimización de los
                     recursos
                     disponibles, orientadas a un desarrollo eficaz y de absoluta calidad.</strong></p>
         </div>
@@ -357,7 +357,7 @@
                     <div class="p-description">
                         <div class="data">
                             <h4>Vivienda Unifamiliar</h4>
-                            <p>Pehuajó - Bs.As.</p>
+                            <p>Luján - Bs.As.</p>
                         </div>
                         <div class="link">
                             <div>
@@ -402,10 +402,9 @@
             </ul>
             <p>Buscanos en nuestras redes sociales.</p>
             <div id="redes">
-                <a href="https://www.instagram.com/carballomarinoarquitectos/" target="_blank"><img src="img/facebook-icon.svg" alt=""></a>
-                <a href="https://www.facebook.com/CarmaArquitectura/" target="_blank"><img src="img/instagram.svg" alt=""></a>
+                <a href="https://www.facebook.com/CarmaArquitectura/" target="_blank"><img src="img/facebook-icon.svg" alt=""></a>
+                <a href="https://www.instagram.com/carballomarinoarquitectos/" target="_blank"><img src="img/instagram.svg" alt=""></a>
             </div>
-        </div>
 
     </section>
 
