--- a/08_v-uni.html
+++ b/08_v-uni.html
@@ -78,47 +78,47 @@
 
                 <div class="img min-left">
                     <img src="projects/p_007/min/01.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(0)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-center">
                     <img src="projects/p_007/min/02.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(1)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-right">
                     <img src="projects/p_007/min/03.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(2)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_007/min/04.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(3)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_007/min/05.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(4)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_007/min/06.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(5)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_007/min/08.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(7)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_007/min/10.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(9)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(9)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_007/min/12.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(11)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(11)">Ampliar</button></div>
                 </div>
 
             </div>
@@ -182,7 +182,7 @@
                 <div class="f-dir1">
                     <p>Lavalle 353, Luján, Buenos Aires.</p>
                     <p class="f-div">&nbsp;-&nbsp</p>
-                    <p>Teléfono oficina Luján: (11) 15/5957-0115</p>
+                    <p>Teléfono oficina Luján: (11) 15/5954-0115</p>
                 </div>
                 <div class="f-dir2">
                     <p>Mitre 1060, Pehuajó, Buenos Aires.</p>
