--- a/10_v-uni.html
+++ b/10_v-uni.html
@@ -77,42 +77,42 @@
 
                 <div class="img min-left">
                     <img src="projects/p_009/min/01.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(0)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(0)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-center">
                     <img src="projects/p_009/min/02.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(1)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(1)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-right">
                     <img src="projects/p_009/min/03.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(2)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(2)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_009/min/04.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(3)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(3)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_009/min/05.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(4)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(4)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_009/min/06.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(5)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(5)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_009/min/07.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(6)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(6)">Ampliar</button></div>
                 </div>
 
                 <div class="img min-out">
                     <img src="projects/p_009/min/08.png" alt="">
-                    <div class="see-more"><button onclick="toFullGallery(7)">Ver más</button></div>
+                    <div class="see-more"><button onclick="toFullGallery(7)">Ampliar</button></div>
                 </div>
 
             </div>
@@ -176,7 +176,7 @@
                 <div class="f-dir1">
                     <p>Lavalle 353, Luján, Buenos Aires.</p>
                     <p class="f-div">&nbsp;-&nbsp</p>
-                    <p>Teléfono oficina Luján: (11) 15/5957-0115</p>
+                    <p>Teléfono oficina Luján: (11) 15/5954-0115</p>
                 </div>
                 <div class="f-dir2">
                     <p>Hipólito Yrigoyen 897, Pehuajó, Buenos Aires.</p>
