--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
             </ul>
             <p>Buscanos en nuestras redes sociales.</p>
             <div id="redes">
-                <a href="https://www.facebook.com/CarmaArquitectura/" target="_blank"><img src="img/facebook-icon.svg" alt=""></a>
+                <a href="https://www.facebook.com/CarballoMarinoArquitectos" target="_blank"><img src="img/facebook-icon.svg" alt=""></a>
                 <a href="https://www.instagram.com/carballomarinoarquitectos/" target="_blank"><img src="img/instagram.svg" alt=""></a>
             </div>
 
